--- a/app/views/deals/_body_promotions.html.erb
+++ b/app/views/deals/_body_promotions.html.erb
@@ -29,6 +29,14 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Discover More</a></div>
 </div>
 
+<div class="filter-node promotion_box" data-filter='["sales","Bargain Finds | $10 & under with free shipping"]'>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/2YwUkk3">Bargain Finds | $10 & under with free shipping</a></h2>
+    <p>Prices include standard shipping, rates may vary by final destination</p>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2YwUkk3">Discover More</a></div>
+</div>
+
 <div class="filter-node promotion_box" data-filter='["coupons","Amazon Coupons"]'>
   <div class="node-box inner">
     <h2><a target="_blank" href="https://amzn.to/2NpeR9j">Amazon Coupons</a></h2>
@@ -47,6 +55,21 @@
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/2Xgag9b">Discover More</a></div>
 </div>
+
+<div class="filter-node promotion_box" data-filter='["promotions","Amazon Wedding Registry"]'>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="https://amzn.to/2XJhkPP">Amazon Wedding Registry</a></h2>
+    <p>Special benefits including:</p>
+      <ul>
+        <li>Up to 20% completion gift off most products on Amazon</li>
+        <li>World's largest selection, plus Amazon's reliable fast shipping and world class customer service</li>
+        <li>It's universal - add items from other websites with the universal button </li>
+        <li>Fast, free shipping - Free shipping on orders over $25 or fast, FREE delivery on millions of items with Prime.</li>
+      </ul>
+  </div>
+  <div class="btn"><a target="_blank" href="https://amzn.to/2XJhkPP">Discover More</a></div>
+</div>
+
 
 <div class="filter-node promotion_box" data-filter='["brands","Save up to 24% OFF on Apple's iPad (All models)"]'>
   <a target="_blank" href="https://amzn.to/2J4FSuq"><img src="https://images.unsplash.com/photo-1471279136892-55af5dc6895f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="apple ipad deals"></a>
@@ -114,13 +137,15 @@
 <div class="filter-node promotion_box" data-filter='["promotions","Join Amazon Family 30-Day Free Trial"]'>
   <div class="node-box inner">
     <h2><a target="_blank" href="https://amzn.to/2ROM6kP">Join Amazon Family 30-Day Free Trial</a></h2>
-    <p>Special benefits including:<br /><br />
-      * Save 20% on diapers subscriptions<br />
-      * Exclusive Coupons and Deals from Amazon Family<br />
-      * Exclusive Baby Registry benefits<br />
-      * FREE Two-Day Shipping on millions of items<br />
-      * Unlimited instant streaming of thousands of movies and TV shows<br />
-      * Unlimited, ad-free streaming of over a million songs and more Prime benefits</p>
+    <p>Special benefits including:</p>
+     <ul>
+      <li>Save 20% on diapers subscriptions</li>
+      <li>Exclusive Coupons and Deals from Amazon Family</li>
+      <li>Exclusive Baby Registry benefits</li>
+      <li>FREE Two-Day Shipping on millions of items</li>
+      <li>Unlimited instant streaming of thousands of movies and TV shows</li>
+      <li>Unlimited, ad-free streaming of over a million songs and more Prime benefits</li>
+     </ul>
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/2ROM6kP">Discover More</a></div>
 </div>
