--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,174 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="50" data-price="95.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YyYQyD"><img src="https://m.media-amazon.com/images/I/813m3agye3L._SR400,400_.jpg" alt="Projector Paick 3200 Lumens Video Proejctor" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>209 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YyYQyD">Projector Paick 3200 Lumens Video Proejctor Support 1080P, 180" Big Screen for Home Cinema, Movies, TV, USB/HDMI/AV/VGA</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$95.00</span><span class="ori_price">$189.99</span></address>
+      <p><span>Take <strong>50% off at $189.99</strong> with promo code: <strong>55ULM6US</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YyYQyD">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="19.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LDgjCs"><img src="https://m.media-amazon.com/images/I/71pKILRPm2L._SR400,400_.jpg" alt="WISSBLUE X2 Military Grade Tactical Flashlight" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>136 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LDgjCs">WISSBLUE X2 Military Grade Tactical Flashlight Rechargeable,6 Mode 1600 High Lumen Flashlight,Best 18650 Led Tactical Flashlight Black set</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.79</span><span class="ori_price">$32.98</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>40% off at $32.98</strong> with promo code: <strong>40KXO99F</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 17, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LDgjCs">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="12.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JdnDD8"><img src="https://m.media-amazon.com/images/I/61dmGx1ETqL._SR400,400_.jpg" alt="Homgeek Chef Knife" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>17 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JdnDD8">Homgeek Chef Knife, 8 inch German High Carbon Stainless Steel Sharp Blade Kitchen Knife with Ergonomic Handle</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.00</span><span class="ori_price">$39.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>70% off at $39.99</strong> with promo code: <strong>70BVJQIB</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JdnDD8">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YzBn09"><img src="https://m.media-amazon.com/images/I/61UHHfN1EwL._SR400,400_.jpg" alt="STARNUO Wireless Headphones" /></a>
+    <div class="rating"><p>0 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YzBn09">STARNUO Wireless Headphones Bluetooth Headset Wireless Neckband Earbuds w/IPX7 Waterproof and Stereo Noise Cancelling in-Ear...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.49</span><span class="ori_price">$24.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $24.99</strong> with promo code: <strong>50F5IVME</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 18, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YzBn09">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xv9mei"><img src="https://m.media-amazon.com/images/I/71bmvuhpRzL._SR400,400_.jpg" alt="UTOOL Trim Removal Tool Kit" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>87 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xv9mei">UTOOL Trim Removal Tool Kit Pro 18pcs for Auto Car Door Trim Panel Removal with Clip Fastener Remover Pliers and Radio Audio Stereo Removal Tools</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.98</span><span class="ori_price">$19.97</span></address>
+      <p><span>Take <strong>50% off at $19.97</strong> with promo code: <strong>50TU1WRW</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xv9mei">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JdEAx6"><img src="https://m.media-amazon.com/images/I/71W4oKWaqfL._SR400,400_.jpg" alt="Pahajim PU leather women purse Crocodile handbag" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>32 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JdEAx6">Pahajim PU leather women top handle satchel handbags tote purse Crocodile handbag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.99</span><span class="ori_price">$29.98</span></address>
+      <p><span>Take <strong>40% off at $29.98</strong> with promo code: <strong>promo_code</strong></span></p>
+      <span class="ex_date">Expiration Date : End_date</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JdEAx6">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="discounted_price">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LEoIW6"><img src="https://m.media-amazon.com/images/I/71a998K-I2L._SR400,400_.jpg" alt="Shower head High Pressure" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>32 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LEoIW6">Shower head High Pressure -4 inch Anti-leak Anti-clog 5 Spray Settings Rain Shower head - Luxury Spa Fixed Showerhead,Polished Chrome</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$discounted_price</span><span class="ori_price">$16.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $16.99</strong> with promo code: <strong>50RLNDVI</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 07, 2019 at 08:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LEoIW6">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="9.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RY2BLr"><img src="https://m.media-amazon.com/images/I/71+W0MaJVFL._SR400,400_.jpg" alt=">MCKOL Women's Sleeveless..." /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>68 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RY2BLr">MCKOL Women's Sleeveless Chiffon Casual Office Tank Top</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.00</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>55% off at $19.99</strong> with promo code: <strong>553ZHHUW</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RY2BLr">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="50" data-price="11.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/30gxHAL"><img src="https://m.media-amazon.com/images/I/91ea8Fc+5gL._SR400,400_.jpg" alt="Phone Camera Lens" /></a>
