--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -219,19 +219,19 @@
 /* End Gift Guide Main Page */
 
 /* For .gift_guide_show */
-.guide_header{margin:120px 0 50px 0;font-family:'Montserrat', sans-serif;}
-.guide_header h2{font-size:50px;width:50%;line-height:1.3;border-top:2px solid;border-bottom:2px solid;padding:10px 0;font-weight:900;}
-.guide_show{font-family: 'Montserrat', sans-serif;}
+.guide_header{width:1000px;margin:120px auto 50px auto;font-family:'Montserrat', sans-serif;}
+.guide_header h2{font-size:35px;width:50%;line-height:1.3;border-top:2px solid;border-bottom:2px solid;padding:10px 0;font-weight:900;}
+.guide_show{font-family: 'Montserrat', sans-serif;width:1000px;margin:auto;}
 .shoes_wrap{margin-top:35px;}
 .guide_show .group:before,
 .guide_show .group:after{content:'';display:block;}
 .guide_show .group:after{clear:both;}
 .guide_show .column_box .last_box{border-right:1px solid #ccc;}
-.guide_show .column{float:left;width:25%;transition:0.3s;border-top:1px solid #ccc;border-left:1px solid #ccc;padding:10px;}
+.guide_show .column{float:left;width:25%;transition:0.3s;border-top:1px solid #ccc;border-left:1px solid #ccc;padding:15px;}
 .guide_show .last_column_box .column{border-bottom:1px solid #ccc;}
 .guide_show .shoes_column{float:left;width:20%;transition:0.3s;}
-.guide_show .column:hover{box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.2); cursor: pointer; }
-.guide_show .column img{width:100%;height:260px;object-fit:cover;}
+.guide_show .column:hover{box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 2px 10px 0 rgba(0, 0, 0, 0.2);cursor:pointer;}
+.guide_show .column img{width:100%;height:250px;object-fit:cover;}
 .guide_show .shoes_column img{object-fit:contain;padding:10px;}
 
 .guide_show .modal{overflow:scroll;background-color:white;position:fixed;left:0;top:-500%;height:100%;width:100%;transition:top 0.6s ease-in-out;z-index:500;}
