--- a/app/views/guides/gift_guide_01.html.erb
+++ b/app/views/guides/gift_guide_01.html.erb
@@ -14,7 +14,7 @@
     <h2>38 Father's Day Gift Ideas for the Coolest Dad Around</h2>
   </div>
 
-  <div class="guide_show">
+  <div class="guide_show clearfix">
     
 
     <div class="flex guide_show_wrap" id="gallery">
