--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,206 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="70" data-price="21.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XR9fbU"><img src="https://m.media-amazon.com/images/I/71P6f4pRaQL._SR400,400_.jpg" alt="BOSTANTEN Women Leather Handbag Designer..." /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>86 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XR9fbU">BOSTANTEN Women Leather Handbag Designer Tote Purse Shoulder Top-handle Bags</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.00</span><span class="ori_price">$69.99</span></address>
+      <p><span>Take <strong>70% off at $Origianl_price</strong> with promo code: <strong>70CZ3HGM</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 18, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XR9fbU">Use Code at Amazon</a><p>run out of stock soon</p></div>
+</div>
+
+<div class="card clearfix" data-score="75" data-price="18.25">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FWJ9dp"><img src="https://m.media-amazon.com/images/I/41WCKHW8QiL._SR400,400_.jpg" alt="Anti-Theft Travel Laptop Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>2 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>75% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FWJ9dp">Anti-Theft Travel Laptop Backpack, Business Computer Bags Waterproof Lightweight with USB Charging Port Travel Backpack for Work Men Women Student (Grey)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.25</span><span class="ori_price">$72.99</span></address>
+      <p><span>Take <strong>75% off at $72.99</strong> with promo code: <strong>75Y6DQ73</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 10, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FWJ9dp">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XxcBfH"><img src="https://m.media-amazon.com/images/I/51yJi9NHxHL._SR400,400_.jpg" alt="AmazeFan Swim Fins Snorkel Fins" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>5 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XxcBfH">AmazeFan Swim Fins Snorkel Fins, Short-Blade Fluid Mechanics Design, Soft and Comfort Wearing Feeling, One Pair</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$23.99</span></address>
+      <p><span>Take <strong>50% off at $23.99</strong> with promo code: <strong>50QC5BEP</strong></span></p>
+      <span class="ex_date">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XxcBfH">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="4.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YCS0Iq"><img src="https://m.media-amazon.com/images/I/71RAXyLtb5L._SR400,400_.jpg" alt="XY Fancy Frankincense Essential Oil" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>7 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YCS0Iq">XY Fancy Frankincense Essential Oil, 100% Pure Natural Organic Therapeutic Grade Beauty Essential Oil 20 ml (0.66 oz)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.50</span><span class="ori_price">$14.99</span></address>
+      <p><span>Take <strong>70% off at $14.99</strong> with promo code: <strong>70P5D9U4</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YCS0Iq">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="11.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RX5dcC"><img src="https://m.media-amazon.com/images/I/51-beD-DdIL._SR400,400_.jpg" alt="Car Back Seat Organizer for Kids" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>6 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RX5dcC">Car Back Seat Organizer for Kids, SURDOCA 4th Generation Enhanced Car Organizer Back Seat for 9.7iPad, 9 Pockets include 2...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.99</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>40% off at $19.99</strong> with promo code: <strong>40Q9ACBX</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 07, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RX5dcC">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="8.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YBNNEL"><img src="https://m.media-amazon.com/images/I/61QT-S9h4wL._SR400,400_.jpg" alt="Athletic Pants " /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>117 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YBNNEL">WANNEW Yoga Pants for Women High Waisted Compression Athletic Pants for Women 4-Way Stretch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.00</span><span class="ori_price">$19.99</span></address>
+      <p><span>Take <strong>60% off at $19.99</strong> with promo code: <strong>60PODZMW</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YBNNEL">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XUD9Ma"><img src="https://m.media-amazon.com/images/I/51BFTFsjD2L._SR400,400_.jpg" alt="VISATOR 5 Gallon Water Bottle Dispenser" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>23 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XUD9Ma">VISATOR 5 Gallon Water Bottle Dispenser - Portable Compact Intelligent wireless Electronic Drinking Water Pump...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>50% off at $29.99</strong> with promo code: <strong>50R9PYE7</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 10, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XUD9Ma">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="6.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XvWGhZ"><img src="https://m.media-amazon.com/images/I/61eHZX4jrlL._SR400,400_.jpg" alt="Wine Tumbler with Lid Stainless Steel" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>35 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XvWGhZ">Wine Tumbler with Lid Stainless Steel, Lezgo Vacuum Insulated Stemless Wine Glasses Unbreakable Cups Travel Mug 12 oz (Star blue)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.5</span><span class="ori_price">$12.99</span></address>
+      <p><span>Take <strong>50% off at $12.99</strong> with promo code: <strong>505R6CZT</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XvWGhZ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="5.58">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XSYbe4"><img src="https://m.media-amazon.com/images/I/61D4YBRE4DL._SR400,400_.jpg" alt="Carantee USB WiFi Adapter 600Mbps" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>306 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XSYbe4">Carantee USB WiFi Adapter 600Mbps, Wireless Network WiFi Dongle with 5dBi Antenna(No CD Disk Needed),AC600 Dual Band 2.4/5GHz 802.11ac,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.58</span><span class="ori_price">$18.59</span></address>
+      <p><span>Take <strong>70% off at $18.59</strong> with promo code: <strong>70OSNOVS</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 10, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XSYbe4">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="8.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XzMEkU"><img src="https://m.media-amazon.com/images/I/51vtbCqVoYL._SR400,400_.jpg" alt="Multi Plug Outlet Extender" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>366 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XzMEkU">Multi Plug Outlet Extender with 2 USB Wall Charger, Travel Power Strip Extension for Cruise Ship Accessories,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.49</span><span class="ori_price">$16.99</span></address>
+      <p><span>Take <strong>50% off at $16.99</strong> with promo code: <strong>50Q5SBL4</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 06, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XzMEkU">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="40" data-price="7.79">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2JiqzOZ"><img src="https://m.media-amazon.com/images/I/51Sdov-2nTL._SR400,400_.jpg" alt="VANMASS Qi Wireless Charger" /></a>
