--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -48,6 +48,204 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="46" data-price="148.12">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LFnVEh"><img src="https://images-na.ssl-images-amazon.com/images/I/91V%2BiRkqCOL._UY741_.jpg" alt="Ferrari Men's Watch" /></a>
+    <div class="rating"><p>0 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>46% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LFnVEh">Ferrari Men's KERS Xtreme Stainless Steel Quartz Watch with Silicone Strap, red, 22 (Model: 0830469)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$148.12</span><span class="ori_price">$275.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LFnVEh">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="46" data-price="96.88">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YMABgF"><img src="https://images-na.ssl-images-amazon.com/images/I/61r8x-SlitL._UX679_.jpg" alt="Armani Exchange Men's Watch" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>177 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>46% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YMABgF">Armani Exchange Men's Three-Hand Stainless Steel Watch</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$96.88</span><span class="ori_price">$180.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YMABgF">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="41" data-price="88.43">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XvJ8CX"><img src="https://images-na.ssl-images-amazon.com/images/I/717XKflJg7L._UX679_.jpg" alt="IVI Division Aviator" /></a>
+    <div class="rating"><p>0 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>41% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XvJ8CX">IVI Division Aviator</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$88.43</span><span class="ori_price">$150.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XvJ8CX">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="67" data-price="149.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JhvEGZ"><img src="https://images-na.ssl-images-amazon.com/images/I/71DHpyIfxnL._UX575_.jpg" alt="TAG Heuer Legend 9382 Square Sunglasses" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>1 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>67% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JhvEGZ">TAG Heuer Legend 9382 Square Sunglasses</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$149.99</span><span class="ori_price">$459.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JhvEGZ">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="41" data-price="39.81">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xv72P3"><img src="https://images-na.ssl-images-amazon.com/images/I/914icbOzLgL._SX522_.jpg" alt="Gucci Made To Measure Eau de Toilette Spray" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>150 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>41% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xv72P3">Gucci Made To Measure Eau de Toilette Spray for Men, 1.6 Ounce </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$39.81</span><span class="ori_price">$68.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xv72P3">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="41" data-price="69.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30eX1Y7"><img src="https://images-na.ssl-images-amazon.com/images/I/9138s0RrP9L._UY741_.jpg" alt="Tommy Hilfiger Alexander" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>2 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>41% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30eX1Y7">Tommy Hilfiger Alexander Nylon BL Bag Multipurpose Backpack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$69.99</span><span class="ori_price">$118.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30eX1Y7">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="84.01">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xy73Xi"><img src="https://images-na.ssl-images-amazon.com/images/I/81toj8HyyPL._UX679_.jpg" alt="Oakley Mens Men's Utility Folded Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>1 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xy73Xi">Oakley Mens Men's Utility Folded Backpack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$84.01</span><span class="ori_price">$140.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xy73Xi">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="139.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XxqQRZ"><img src="https://images-na.ssl-images-amazon.com/images/I/51W-O4Jn9EL._SX522_.jpg" alt="AMD Ryzen" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>773 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XxqQRZ">AMD Ryzen 5 2600 Processor with Wraith Stealth Cooler - YD2600BBAFBOX</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$139.99</span><span class="ori_price">$199.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XxqQRZ">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="39" data-price="109.95">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XrwVPO"><img src="https://images-na.ssl-images-amazon.com/images/I/81AMm9SEbyL._SX679_.jpg" alt="TCL 32D100 32-Inch 720p LED TV (2017 Model)" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>379 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>39% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XrwVPO">TCL 32D100 32-Inch 720p LED TV (2017 Model)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$109.95</span><span class="ori_price">$179.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XrwVPO">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="29" data-price="177.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XwsnMN"><img src="https://images-na.ssl-images-amazon.com/images/I/81khZx00%2BtL._SX522_.jpg" alt="Samsung T5 Portable SSD - 1TB" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,691 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>29% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XwsnMN">Samsung T5 Portable SSD - 1TB - USB 3.1 External SSD (MU-PA1T0B/AM), Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$177.99</span><span class="ori_price">$249.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XwsnMN">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="40.48">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LHyGWW"><img src="https://images-na.ssl-images-amazon.com/images/I/51cFg3MZiEL._UX679_.jpg" alt="Element Men's Alder Rain" /></a>
+    <div class="rating"><p>0 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LHyGWW">Element Men's Alder Rain</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$40.48</span><span class="ori_price">$89.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LHyGWW">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="58" data-price="24.99">
   <div class="image_box">
     <a target="_blank" href="product_link"><img src="https://images-na.ssl-images-amazon.com/images/I/31RCRbbhY3L.jpg" alt="Wireless Bluetooth Headset" /></a>
