--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,126 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="10" data-price="32.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XtSNtF"><img src="https://m.media-amazon.com/images/I/61xJJUMFvWL._SR400,400_.jpg" alt="ZOVER Wireless Earbuds" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>18 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>10% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XtSNtF">ZOVER Wireless Earbuds X9 Stereo Sound True Wireless Auto Pairing Bluetooth 5.0 Noise Cancelling Earbuds...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$32.39</span><span class="ori_price">$35.99</span></address>
+      <p><span>Take <strong>10% off at $35.99</strong> with promo code: <strong>10UE9UVM</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 25, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XtSNtF">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LAEph8"><img src="https://m.media-amazon.com/images/I/61RtriThrGL._SR400,400_.jpg" alt="Yopay Electric Toothbrush" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>7 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LAEph8">Yopay Electric Toothbrush Replacement Brush Heads Refill Compatible With Philips Sonicare Proresult,Fit 2 Series,Healthy...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.49</span><span class="ori_price">$26.99</span></address>
+      <p><span>Take <strong>50% off at $26.99</strong> with promo code: <strong>50CMAUTZ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LAEph8">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30gA8n5"><img src="https://m.media-amazon.com/images/I/71JKogVGxtL._SR400,400_.jpg" alt="MAXPOWER 34-Piece Socket Wrench Set." /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>8 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30gA8n5">MAXPOWER 34-Piece Socket Wrench Set. 1/4-Inch Drive SAE Inch Sockets, Hex, Slotted and Philips Bits Sockets, ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.99</span><span class="ori_price">$25.99</span></address>
+      <p><span>Take <strong>50% off at $25.99</strong> with promo code: <strong>50LB7LP7</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 31, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30gA8n5">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="75" data-price="12.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XwU6Nt"><img src="https://m.media-amazon.com/images/I/91ZHTPl9pTL._SR400,400_.jpg" alt="Outdoor Laptop Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>15 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>75% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XwU6Nt">Outdoor Laptop Backpack, IHONEY Canvas Large Capacity Student School Bag Fits 15.6 Inch Laptop</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.50</span><span class="ori_price">$49.99</span></address>
+      <p><span>Take <strong>75% off at $49.99</strong> with promo code: <strong>75MTQ81R</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 07, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XwU6Nt">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.68">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XwBayh"><img src="https://m.media-amazon.com/images/I/511mQ9rG8BL._SR400,400_.jpg" alt="CAMEL CROWN Running Shorts" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>27 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XwBayh">CAMEL CROWN Running Shorts Men Pockets Quick Dry Light Breathable Athletic Shorts for Gym Basketball Workout Active Training</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.68</span><span class="ori_price">$25.36</span></address>
+      <p><span>Take <strong>50% off at $25.36</strong> with promo code: <strong>5047U9W1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XwBayh">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="16.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xs3BgS"><img src="https://m.media-amazon.com/images/I/71GurwxizAL._SR400,400_.jpg" alt="Car Vacuum Cleaner" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>67 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xs3BgS">Car Vacuum Cleaner High Power Handheld Wet Dry Stronger Suction Portable Auto Vacuum Cleaner DC 12V 4000PA 16.4FT(5M) Power Cord...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.00</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>60% off at $39.99</strong> with promo code: <strong>60Y8ANX5</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xs3BgS">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="80" data-price="3.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XxEYug"><img src="https://m.media-amazon.com/images/I/71qmlnEv8xL._SR400,400_.jpg" alt="iPad Pro 11 inch 2018 Case" /></a>
