--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -48,6 +48,42 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="50" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LFkHAJ"><img src="https://images-na.ssl-images-amazon.com/images/I/61u2fw3qupL._SX679_.jpg" alt="KitchenAid KTEN20CBOB 2.0-Quart Kettle" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>954 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LFkHAJ">KitchenAid KTEN20CBOB 2.0-Quart Kettle with C Handle and Trim Band - Onyx Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$24.99</span><span class="ori_price">$49.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LFkHAJ">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="12.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LH09rA"><img src="https://images-na.ssl-images-amazon.com/images/I/61jKE5eoOoL._SX522_.jpg" alt="GOgroove Bluetooth Multimedia Remote Control" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>32 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LH09rA">GOgroove Bluetooth Multimedia Remote Control - Wireless Camera Shutter , Audio Playback Controls and Voice Activated Commands...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$12.99</span><span class="ori_price">$26.17</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LH09rA">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="46" data-price="148.12">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LFnVEh"><img src="https://images-na.ssl-images-amazon.com/images/I/91V%2BiRkqCOL._UY741_.jpg" alt="Ferrari Men's Watch" /></a>
